<resources>
    <string name="app_name">BeWell</string>
    <string name="title_activity_add_food">add_food</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="bewell">BeWell</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="notifications">Push Notifications</string>
    <string name="logout">LOG OUT</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_display_ambassador">DisplayAmbassadorActivity</string>
</resources>