<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Update_Profile"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/name"
        android:id="@+id/edit_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="50dp"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/surname"
        android:id="@+id/edit_surname"
        android:inputType="textPersonName"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/update"
        android:id="@+id/update_profile"/>


</LinearLayout>