<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsScreenActivity"
    android:background="@color/white"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >
            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="65dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:id="@+id/nameTop"/>
                <TextView
                    android:id="@+id/ID"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_alignParentBottom="true"
                    android:hint="ID"/>
            </RelativeLayout>


            <ImageButton
                android:id="@+id/updateButton"
                android:layout_width="40sp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_edit_24"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:id="@+id/profile_picture">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_baseline_person_outline_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:orientation="horizontal" >


            <TextView
                android:id="@+id/PersonName"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/Surname"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/surname"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:hint="@string/email"
                android:ems="10"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/password"
                android:ems="10"
                android:textColor="@color/black"
                />

            <Switch
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/notifications"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:drawableStart="@drawable/ic_baseline_notifications_none_24"
                android:drawableLeft="@drawable/ic_baseline_notifications_none_24" />



        </LinearLayout>


        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="550dp"
            android:textColor="@color/black"
            android:text="@string/logout"
            app:backgroundTint="#FFFFFF"


            />



    <!--    Must Be kept for bottom navigation bar | use relative layout or other to align to the bottom-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigation"
        app:itemBackground="@drawable/background_menu"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        android:backgroundTint="@color/gray"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>